--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
-    id "org.jetbrains.kotlin.kapt" version "1.3.61"
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.5.31'
+    id "org.jetbrains.kotlin.kapt" version "1.5.31"
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 group 'org.example'
@@ -15,21 +15,23 @@ repositories {
 }
 
 dependencies {
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
     kapt project("simpler-orm")
-    compile project("simpler-orm")
-    compile project(":simpler")
-    compile project(':simpler-configurator')
-    compile project(":simpler-jackson-adapter")
-    compile project(":simpler-orm-jacksonadapter")
-    compile project(":simpler-freemarker-adapter")
-    compile project(":simpler-embedded-jetty")
-    compile("org.apache.logging.log4j:log4j-api:2.11.1")
-    compile("org.apache.logging.log4j:log4j-core:2.11.1")
-    compile("org.apache.logging.log4j:log4j-slf4j-impl:2.11.1")
-    compile("com.zaxxer:HikariCP:2.6.1")
-    compile("org.postgresql:postgresql:42.2.9")
+    implementation project("simpler-orm")
+    implementation project(":simpler")
+    implementation project(':simpler-configurator')
+    implementation project(":simpler-jackson-adapter")
+    implementation project(":simpler-orm-jacksonadapter")
+    implementation project(":simpler-freemarker-adapter")
+    implementation project(":simpler-embedded-jetty")
+    implementation("org.apache.logging.log4j:log4j-api:2.11.1")
+    implementation("org.apache.logging.log4j:log4j-core:2.11.1")
+    implementation("org.apache.logging.log4j:log4j-slf4j-impl:2.11.1")
+    implementation("com.zaxxer:HikariCP:2.6.1")
+    implementation("org.postgresql:postgresql:42.2.9")
     implementation 'com.auth0:java-jwt:3.10.2'
 }
 
@@ -40,13 +42,8 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
-jar {
+shadowJar {
     manifest {
         attributes 'Main-Class': 'MainKt'
     }
-
-    // This line of code recursively collects and copies all of a project's files
-    // and adds them to the JAR itself. One can extend this task, to skip certain
-    // files or particular types at will
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
