--- a/simpler-freemarker-adapter/build.gradle
+++ b/simpler-freemarker-adapter/build.gradle
@@ -13,7 +13,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' // version '1.3.11'
 }
 
-apply plugin: 'com.novoda.bintray-release'
+//apply plugin: 'com.novoda.bintray-release'
 
 group 'at.wavywalk.simpler.freemarkeradapter'
 version '0.1.0'
@@ -28,35 +28,35 @@ repositories {
     
 }
 
-task sourcesJar(type: Jar, dependsOn: project.classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
+//task sourcesJar(type: Jar, dependsOn: project.classes) {
+//    classifier = 'sources'
+//    from sourceSets.main.allSource
+//}
 //
 //task javadocJar(type: Jar, dependsOn: project.javadoc) {
 //    from javadoc.destinationDir
 //}
 //
-artifacts {
-    archives sourcesJar
-}
+//artifacts {
+//    archives sourcesJar
+//}
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.freemarker', name: 'freemarker', version: '2.3.26-incubating'
-    compile project(":simpler")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.26-incubating'
+    implementation project(":simpler")
 }
 
-publish {
-    userOrg = 'wavywalk'
-    groupId = 'at.wavywalk.simpler'
-    repoName = 'maven'
-    artifactId = 'simpler-freemarker-adapter'
-    publishVersion = '0.1.0'
-    desc = 'a configuration lib'
-    repository = "https://github.com/WavyWalk/simpler-freemarker-adapter"
-}
+//publish {
+//    userOrg = 'wavywalk'
+//    groupId = 'at.wavywalk.simpler'
+//    repoName = 'maven'
+//    artifactId = 'simpler-freemarker-adapter'
+//    publishVersion = '0.1.0'
+//    desc = 'a configuration lib'
+//    repository = "https://github.com/WavyWalk/simpler-freemarker-adapter"
+//}
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
