--- a/simpler-jackson-adapter/build.gradle
+++ b/simpler-jackson-adapter/build.gradle
@@ -1,7 +1,4 @@
 buildscript {
-    repositories {
-        jcenter()
-    }
     dependencies {
         classpath 'com.novoda:bintray-release:0.9'
     }
@@ -12,7 +9,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' // version '1.3.11'
 }
 
-apply plugin: 'com.novoda.bintray-release'
+//apply plugin: 'com.novoda.bintray-release'
 
 group 'at.wavywalk.simpler'
 version '0.1.0'
@@ -26,35 +23,36 @@ repositories {
     }
 }
 
-task sourcesJar(type: Jar, dependsOn: project.classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
+//task sourcesJar(type: Jar, dependsOn: project.classes) {
+//    classifier = 'sources'
+//    from sourceSets.main.allSource
+//}
 //
 //task javadocJar(type: Jar, dependsOn: project.javadoc) {
 //    from javadoc.destinationDir
 //}
 //
-artifacts {
-    archives sourcesJar
-}
+//artifacts {
+//    archives sourcesJar
+//}
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.2'
-    compile project(":simpler")
+    implementation 'javax.servlet:servlet-api:2.5'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.2'
+    implementation project(":simpler")
 }
 
-publish {
-    userOrg = 'wavywalk'
-    groupId = 'at.wavywalk.simpler'
-    repoName = 'maven'
-    artifactId = 'simpler-jacksonadapter'
-    publishVersion = '0.1.0'
-    desc = 'jackson adapter for paramaters parsing'
-    repository = "https://github.com/WavyWalk/simpler-jacksonadapter"
-}
+//publish {
+//    userOrg = 'wavywalk'
+//    groupId = 'at.wavywalk.simpler'
+//    repoName = 'maven'
+//    artifactId = 'simpler-jacksonadapter'
+//    publishVersion = '0.1.0'
+//    desc = 'jackson adapter for paramaters parsing'
+//    repository = "https://github.com/WavyWalk/simpler-jacksonadapter"
+//}
 
 
 compileKotlin {
