--- a/simpler/build.gradle
+++ b/simpler/build.gradle
@@ -33,13 +33,13 @@ artifacts {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
-    compile group: 'javax', name: 'javaee-api', version: '8.0'
-    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
-    compile project(":simpler-configurator")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testImplementation group: 'junit', name: 'junit', version: '4.11'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
+    implementation group: 'javax', name: 'javaee-api', version: '8.0'
+    implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
+    implementation project(":simpler-configurator")
 }
 
 //publish {
